--- a/index.html
+++ b/index.html
@@ -7,112 +7,121 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="modern-normalize.css">
     <link rel="stylesheet" href="style.css">
     <title>WebStudio</title>
 </head>
 <body>
-    <!--Хэдер-->
-    <header>
-        <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>
-        <nav class="navigation">
-            <ul class="navlist">
-                <li class="navlinks">
-                 <a class="navlinksitem current" href="index.html">Студия</a>
-                </li>
-                <li class="navlinks">
-                 <a class="navlinksitem" href="portfolio.html">Портфолио</a>
-                </li>
-                <li class="navlinks">
-                    <a class="navlinksitem" href="#">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <ul class="navlistcontacts">
-            <li>
-                <a class="navlinkscont" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a class="navlinkscont" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
-    </header>
-    
-    <main>
-        <!--hero-->
-        <section class="section1">
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button class="order-btn" type="button">Заказать услугу</button>
-        </section>
-        <section class="section2">
-            <ul>
-                <li>
-                    <h3 class="description-section2-h3">Внимание к деталям</h3>
-                    <p class="description-section2-p">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3 class="description-section2-h3">Пунктуальность</h3>
-                    <p class="description-section2-p">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3 class="description-section2-h3">Планирование</h3>
-                    <p class="description-section2-p">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3 class="description-section2-h3">Современные технологии</h3>
-                    <p class="description-section2-p">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </section>
-        <!--Чем мы занимаемся-->
-        <section class="section3">
-            <h2 class="section3-h2">Чем мы занимаемся</h2>
-            <ul>
-                <li>
-                    <img src="./img/we_do/box-1.jpg" alt="верстка" width="370" height="300">
-                </li>
-                <li>
-                    <img src="./img/we_do/box-2.jpg" alt="мобильные приложения" width="370" height="300">
-                </li>
-                <li>
-                    <img src="./img/we_do/box-3.jpg" alt="отличный дизайн" width="370" height="300">
-                </li>
-            </ul>
-        </section>
-        <!--Наша  команда.-->
-        <section class="section4">
-            <h2 class="section4-h2">Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./img/team/team-card-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                    <h3 class="section4-h3">Игорь Демьяненко</h3>
-                    <p class="section4-position">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./img/team/team-card-2.jpg" alt="Ольга Репина" width="270" height="270">
-                    <h3 class="section4-h3">Ольга Репина</h3>
-                    <p class="section4-position">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./img/team/team-card-3.jpg" alt="Николай Тарасов" width="270" height="270">
-                    <h3 class="section4-h3">Николай Тарасов</h3>
-                    <p class="section4-position">Marketing</p>
-                </li>
-                <li>
-                    <img src="./img/team/team-card-4.jpg" alt="Михаил Ермаков" width="270" height="270">
-                    <h3 class="section4-h3">Михаил Ермаков</h3>
-                    <p class="section4-position">UI Designer</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <!--Footer-->
-    <footer class="footer">    
-        <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-down">Studio</span></a>   
-        <address class="footer-adress">
-        г. Киев, пр-т Леси Украинки, 26
-        <a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>   
-    </footer> 
+    <div class="container">
+        <!--Хэдер-->
+        <header>
+            <div class="nav-container">
+                <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>
+                <div class="ul-container">
+                    <nav class="navigation">
+                        <ul class="navlist">
+                            <li class="navlinks">
+                                <a class="navlinksitem current" href="index.html">Студия</a>
+                            </li>
+                            <li class="navlinks">
+                                <a class="navlinksitem" href="portfolio.html">Портфолио</a>
+                            </li>
+                            <li class="navlinks">
+                                <a class="navlinksitem" href="#">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="navlinkscont-container">
+                <ul class="navlistcontacts">
+                    <li>
+                        <a class="navlinkscont" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="navlinkscont" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </div>
+        </header>
+        
+        <main>
+            <!--hero-->
+            <section class="section1">
+                <h1>Эффективные решения для вашего бизнеса</h1>
+                <button class="order-btn" type="button">Заказать услугу</button>
+            </section>
+            <section class="section2">
+                <ul>
+                    <li>
+                        <h3 class="description-section2-h3">Внимание к деталям</h3>
+                        <p class="description-section2-p">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li>
+                        <h3 class="description-section2-h3">Пунктуальность</h3>
+                        <p class="description-section2-p">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li>
+                        <h3 class="description-section2-h3">Планирование</h3>
+                        <p class="description-section2-p">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <h3 class="description-section2-h3">Современные технологии</h3>
+                        <p class="description-section2-p">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+            </section>
+            <!--Чем мы занимаемся-->
+            <section class="section3">
+                <h2 class="section3-h2">Чем мы занимаемся</h2>
+                <ul>
+                    <li>
+                        <img src="./img/we_do/box-1.jpg" alt="верстка" width="370" height="300">
+                    </li>
+                    <li>
+                        <img src="./img/we_do/box-2.jpg" alt="мобильные приложения" width="370" height="300">
+                    </li>
+                    <li>
+                        <img src="./img/we_do/box-3.jpg" alt="отличный дизайн" width="370" height="300">
+                    </li>
+                </ul>
+            </section>
+            <!--Наша  команда.-->
+            <section class="section4">
+                <h2 class="section4-h2">Наша команда</h2>
+                <ul>
+                    <li>
+                        <img src="./img/team/team-card-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                        <h3 class="section4-h3">Игорь Демьяненко</h3>
+                        <p class="section4-position">Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./img/team/team-card-2.jpg" alt="Ольга Репина" width="270" height="270">
+                        <h3 class="section4-h3">Ольга Репина</h3>
+                        <p class="section4-position">Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="./img/team/team-card-3.jpg" alt="Николай Тарасов" width="270" height="270">
+                        <h3 class="section4-h3">Николай Тарасов</h3>
+                        <p class="section4-position">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./img/team/team-card-4.jpg" alt="Михаил Ермаков" width="270" height="270">
+                        <h3 class="section4-h3">Михаил Ермаков</h3>
+                        <p class="section4-position">UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <!--Footer-->
+        <footer class="footer">    
+            <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-down">Studio</span></a>   
+            <address class="footer-adress">
+            г. Киев, пр-т Леси Украинки, 26
+            <a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+            </address>   
+        </footer> 
+    </div>
 </body>
 </html>
