index html готов

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <title>WebStudio</title>
 </head>
 <body>
-    <div class="container">
-        <!--Хэдер-->
-        <header>
-            <div class="nav-container">
-                <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>
-                <div class="ul-container">
+     <!--Хэдер-->
+     <header>
+        <div class="container">
+             <section class="section0">
+                <div class="nav-container">
+                    <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>     
                     <nav class="navigation">
                         <ul class="navlist">
                             <li class="navlinks">
@@ -30,98 +30,109 @@
                                 <a class="navlinksitem" href="#">Контакты</a>
                             </li>
                         </ul>
-                    </nav>
+                    </nav>    
                 </div>
+                <div class="navlinkscontact-container">
+                    <ul class="navlistcontacts">
+                        <li>
+                            <a class="navlinkscont" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li>
+                            <a class="navlinkscont" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </div>
+             </section>
+        </div>
+     </header>    
+     <main>
+         <!--hero-->
+         <section class="section1">
+            <div class="container">
+                <section class="section1-1">
+                    <h1>Эффективные решения <br>для вашего бизнеса</h1>
+                    <button class="order-btn" type="button">Заказать услугу</button>
+                </section>
             </div>
-            <div class="navlinkscont-container">
-                <ul class="navlistcontacts">
-                    <li>
-                        <a class="navlinkscont" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a class="navlinkscont" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </div>
-        </header>
-        
-        <main>
-            <!--hero-->
-            <section class="section1">
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button class="order-btn" type="button">Заказать услугу</button>
-            </section>
-            <section class="section2">
-                <ul>
-                    <li>
+        </section>
+        <section class="section2">
+            <div class="container">
+                <ul class="ul-section2">
+                    <li class="li-section2">
                         <h3 class="description-section2-h3">Внимание к деталям</h3>
                         <p class="description-section2-p">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li>
+                    <li class="li-section2">
                         <h3 class="description-section2-h3">Пунктуальность</h3>
                         <p class="description-section2-p">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li>
+                    <li class="li-section2">
                         <h3 class="description-section2-h3">Планирование</h3>
                         <p class="description-section2-p">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li>
+                    <li class="li-section2">
                         <h3 class="description-section2-h3">Современные технологии</h3>
                         <p class="description-section2-p">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
-            </section>
-            <!--Чем мы занимаемся-->
-            <section class="section3">
+            </div>
+        </section>
+        <!--Чем мы занимаемся-->
+        <section class="section3">
+            <div class="container">
                 <h2 class="section3-h2">Чем мы занимаемся</h2>
-                <ul>
-                    <li>
+                <ul class="ul-section3">
+                    <li class="li-img">
                         <img src="./img/we_do/box-1.jpg" alt="верстка" width="370" height="300">
                     </li>
-                    <li>
+                    <li class="li-img">
                         <img src="./img/we_do/box-2.jpg" alt="мобильные приложения" width="370" height="300">
                     </li>
-                    <li>
+                    <li class="li-img">
                         <img src="./img/we_do/box-3.jpg" alt="отличный дизайн" width="370" height="300">
                     </li>
                 </ul>
-            </section>
-            <!--Наша  команда.-->
-            <section class="section4">
+            </div>
+        </section>
+        <!--Наша  команда.-->
+        <section class="section4">
+           <div class="container">
                 <h2 class="section4-h2">Наша команда</h2>
-                <ul>
-                    <li>
+                <ul class="ul-section4">
+                    <li class="li-section4">
                         <img src="./img/team/team-card-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
                         <h3 class="section4-h3">Игорь Демьяненко</h3>
                         <p class="section4-position">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="li-section4">
                         <img src="./img/team/team-card-2.jpg" alt="Ольга Репина" width="270" height="270">
                         <h3 class="section4-h3">Ольга Репина</h3>
                         <p class="section4-position">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="li-section4">
                         <img src="./img/team/team-card-3.jpg" alt="Николай Тарасов" width="270" height="270">
                         <h3 class="section4-h3">Николай Тарасов</h3>
                         <p class="section4-position">Marketing</p>
                     </li>
-                    <li>
+                    <li class="li-section4">
                         <img src="./img/team/team-card-4.jpg" alt="Михаил Ермаков" width="270" height="270">
                         <h3 class="section4-h3">Михаил Ермаков</h3>
                         <p class="section4-position">UI Designer</p>
                     </li>
                 </ul>
-            </section>
-        </main>
-        <!--Footer-->
-        <footer class="footer">    
+           </div>
+        </section>
+     </main>
+     <!--Footer-->
+     <footer class="footer">    
+        <div class="container">
             <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-down">Studio</span></a>   
             <address class="footer-adress">
-            г. Киев, пр-т Леси Украинки, 26
-            <a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+            <p class="address-footer">г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="mail-footer"><a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+            <p class="tel-footer"><a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a></p>
             </address>   
-        </footer> 
-    </div>
+        </div>
+     </footer> 
 </body>
 </html>
