--- a/portfolio.html
+++ b/portfolio.html
@@ -14,39 +14,46 @@
 <body>
     <!--Хэдер-->
     <header>
-        <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>
-        <nav class="navigation">
-            <ul class="navlist">
-                <li class="navlinks">
-                 <a class="navlinksitem" href="index.html">Студия</a>
-                </li>
-                <li class="navlinks">
-                 <a class="navlinksitem current" href="portfolio.html2">Портфолио</a>
-                </li>
-                <li class="navlinks">
-                    <a class="navlinksitem" href="#">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <ul class="navlistcontacts">
-            <li>
-                <a class="navlinkscont" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a class="navlinkscont" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
-    </header>
-    
+        <div class="container">
+             <section class="section0">
+                <div class="nav-container">
+                    <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>     
+                    <nav class="navigation">
+                        <ul class="navlist">
+                            <li class="navlinks">
+                                <a class="navlinksitem current" href="index.html">Студия</a>
+                            </li>
+                            <li class="navlinks">
+                                <a class="navlinksitem" href="portfolio.html">Портфолио</a>
+                            </li>
+                            <li class="navlinks">
+                                <a class="navlinksitem" href="#">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>    
+                </div>
+                <div class="navlinkscontact-container">
+                    <ul class="navlistcontacts">
+                        <li>
+                            <a class="navlinkscont" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li>
+                            <a class="navlinkscont" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </div>
+             </section>
+        </div>
+    </header> 
     <main>
-        <section>
+        <section class="container">
                 <!--Навигация по галерее-->
-            <ul class="navlist">
+            <ul class="navlist portfolio">
                 <li class="navlinks">
-                <button type="button" class="navlinksitem filter current">Все</button>
+                    <button type="button" class="navlinksitem filter current">Все</button>
                 </li>
                 <li class="navlinks">
-                <button type="button" class="navlinksitem filter">Веб-сайты</button>
+                    <button type="button" class="navlinksitem filter">Веб-сайты</button>
                 </li>
                 <li class="navlinks">
                     <button type="button" class="navlinksitem filter">Приложения</button>
@@ -57,68 +64,67 @@
                 <li class="navlinks">
                     <button type="button" class="navlinksitem filter">Маркетинг</button>
                 </li>
-            </ul>
-        
+            </ul>        
             <!--Портфолио-->
             <div class="gallery">
-                <ul>
-                    <li>
+                <ul class="ul-gallery">
+                    <li class="li-gallery">
                         <div class="gallery-items">
                             <img src="./img2/1.jpg" alt="Технокряк" width="370" height="294">
                             <h3 class="gallery-h3">Технокряк</h3>
                             <p class="categories">Веб-сайт</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="li-gallery">
                         <div class="gallery-items">
                             <img src="./img2/2New-Orlean-vs-Golden-Star.jpg" alt="New Orlean vs Golden Star" width="370" height="294">
                             <h3 class="gallery-h3">Постер New Orlean vs Golden Star</h3>
                             <p class="categories">Дизайн</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="li-gallery">
                         <div class="gallery-items">
                             <img src="./img2/3Seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
                             <h3 class="gallery-h3">Ресторан Seafood</h3>
                             <p class="categories">Приложение</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="li-gallery">
                         <div class="gallery-items">
                             <img src="./img2/4Prime.jpg" alt="Проект Prime" width="370" height="294">
                             <h3 class="gallery-h3">Проект Prime</h3>
                             <p class="categories">Маркетинг</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="li-gallery">
                         <div class="gallery-items">
                             <img src="./img2/5Boxes.jpg" alt="Проект Boxes" width="370" height="294">
                             <h3 class="gallery-h3">Проект Boxes</h3>
                             <p class="categories">Приложение</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="li-gallery">
                         <div class="gallery-items">
                             <img src="./img2/6Inspiration-has-no-Borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
                             <h3 class="gallery-h3">Inspiration has no Borders</h3>
                             <p class="categories">Веб-сайт</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="li-gallery">
                         <div class="gallery-items">
                             <img src="./img2/7-Limited-Edition.jpg" alt="Издание Limited Edition" width="370" height="294">
                             <h3 class="gallery-h3">Издание Limited Edition</h3>
                             <p class="categories">Дизайн</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="li-gallery">
                         <div class="gallery-items">
                             <img src="./img2/8-LAB.jpg" alt="Проект LAB" width="370" height="294">
                             <h3 class="gallery-h3">Проект LAB</h3>
                             <p class="categories">Маркетинг</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="li-gallery">
                         <div class="gallery-items">
                             <img src="./img2/9Growing-Business.jpg" alt="Growing Business" width="370" height="294">
                             <h3 class="gallery-h3">Growing Business</h3>
@@ -131,12 +137,14 @@
     </main>
     <!--Footer-->
     <footer class="footer">    
-        <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-down">Studio</span></a>   
-        <address class="footer-adress">
-        г. Киев, пр-т Леси Украинки, 26
-        <a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>   
-    </footer> 
+        <div class="container">
+            <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-down">Studio</span></a>   
+            <address class="footer-adress">
+            <p class="address-footer">г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="mail-footer"><a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+            <p class="tel-footer"><a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a></p>
+            </address>   
+        </div>
+     </footer> 
 </body>
 </html>
