поправки из дз2

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         <div class="container">
             <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-down">Studio</span></a>   
             <address class="footer-adress">
-            <p class="address-footer">г. Киев, пр-т Леси Украинки, 26</p>
-            <p class="mail-footer"><a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p class="tel-footer"><a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a></p>
+                <a class="footer-map" href="#">г. Киев, пр-т Леси Украинки, 26</a>
+                <a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
             </address>   
         </div>
      </footer> 
