--- a/portfolio.html
+++ b/portfolio.html
@@ -69,67 +69,67 @@
             <div class="gallery">
                 <ul class="ul-gallery">
                     <li class="li-gallery">
-                        <div class="gallery-items">
+                        <a class="gallery-items" href="#">
                             <img src="./img2/1.jpg" alt="Технокряк" width="370" height="294">
                             <h3 class="gallery-h3">Технокряк</h3>
                             <p class="categories">Веб-сайт</p>
-                        </div>
+                        </a>
                     </li>
                     <li class="li-gallery">
-                        <div class="gallery-items">
+                        <a class="gallery-items" href="#">
                             <img src="./img2/2New-Orlean-vs-Golden-Star.jpg" alt="New Orlean vs Golden Star" width="370" height="294">
                             <h3 class="gallery-h3">Постер New Orlean vs Golden Star</h3>
                             <p class="categories">Дизайн</p>
-                        </div>
+                        </a>
                     </li>
                     <li class="li-gallery">
-                        <div class="gallery-items">
+                        <a class="gallery-items" href="#">
                             <img src="./img2/3Seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
                             <h3 class="gallery-h3">Ресторан Seafood</h3>
                             <p class="categories">Приложение</p>
-                        </div>
+                        </a>
                     </li>
                     <li class="li-gallery">
-                        <div class="gallery-items">
+                        <a class="gallery-items" href="#">
                             <img src="./img2/4Prime.jpg" alt="Проект Prime" width="370" height="294">
                             <h3 class="gallery-h3">Проект Prime</h3>
                             <p class="categories">Маркетинг</p>
-                        </div>
+                        </a>
                     </li>
                     <li class="li-gallery">
-                        <div class="gallery-items">
+                        <a class="gallery-items" href="#">
                             <img src="./img2/5Boxes.jpg" alt="Проект Boxes" width="370" height="294">
                             <h3 class="gallery-h3">Проект Boxes</h3>
                             <p class="categories">Приложение</p>
-                        </div>
+                        </a>
                     </li>
                     <li class="li-gallery">
-                        <div class="gallery-items">
+                        <a class="gallery-items" href="#">
                             <img src="./img2/6Inspiration-has-no-Borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
                             <h3 class="gallery-h3">Inspiration has no Borders</h3>
                             <p class="categories">Веб-сайт</p>
-                        </div>
+                        </a>
                     </li>
                     <li class="li-gallery">
-                        <div class="gallery-items">
+                        <a class="gallery-items" href="#">
                             <img src="./img2/7-Limited-Edition.jpg" alt="Издание Limited Edition" width="370" height="294">
                             <h3 class="gallery-h3">Издание Limited Edition</h3>
                             <p class="categories">Дизайн</p>
-                        </div>
+                        </a>
                     </li>
                     <li class="li-gallery">
-                        <div class="gallery-items">
+                        <a class="gallery-items" href="#">
                             <img src="./img2/8-LAB.jpg" alt="Проект LAB" width="370" height="294">
                             <h3 class="gallery-h3">Проект LAB</h3>
                             <p class="categories">Маркетинг</p>
-                        </div>
+                        </a>
                     </li>
                     <li class="li-gallery">
-                        <div class="gallery-items">
+                        <a class="gallery-items" href="#">
                             <img src="./img2/9Growing-Business.jpg" alt="Growing Business" width="370" height="294">
                             <h3 class="gallery-h3">Growing Business</h3>
                             <p class="categories">Приложение</p>
-                        </div>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -140,9 +140,9 @@
         <div class="container">
             <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-down">Studio</span></a>   
             <address class="footer-adress">
-            <p class="address-footer">г. Киев, пр-т Леси Украинки, 26</p>
-            <p class="mail-footer"><a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p class="tel-footer"><a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a></p>
+                <a class="footer-map" href="#">г. Киев, пр-т Леси Украинки, 26</a>
+                <a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
             </address>   
         </div>
      </footer> 
