--- a/portfolio.html
+++ b/portfolio.html
@@ -141,7 +141,7 @@
             <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-down">Studio</span></a>   
             <address class="footer-adress">
                 <a class="footer-map" href="#">г. Киев, пр-т Леси Украинки, 26</a>
-                <a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
             </address>   
         </div>
