--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <!--Хэдер-->
     <header>
         <div class="container">
-             <section class="section0">
+             <section class="section">
                 <div class="nav-container">
                     <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>     
                     <nav class="navigation">
