исправления по дз index.html

--- a/index.html
+++ b/index.html
@@ -14,45 +14,41 @@
 <body>
      <!--Хэдер-->
      <header>
-        <div class="container">
-             <section class="section">
-                <div class="nav-container">
-                    <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>     
-                    <nav class="navigation">
-                        <ul class="navlist">
-                            <li class="navlinks">
-                                <a class="navlinksitem current" href="index.html">Студия</a>
-                            </li>
-                            <li class="navlinks">
-                                <a class="navlinksitem" href="portfolio.html">Портфолио</a>
-                            </li>
-                            <li class="navlinks">
-                                <a class="navlinksitem" href="#">Контакты</a>
-                            </li>
-                        </ul>
-                    </nav>    
-                </div>
-                <div class="navlinkscontact-container">
-                    <ul class="navlistcontacts">
-                        <li>
-                            <a class="navlinkscont" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <div class="container section">
+            <div class="nav-container">
+                <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>     
+                <nav class="navigation">
+                    <ul class="navlist">
+                        <li class="navlinks">
+                            <a class="navlinksitem current" href="index.html">Студия</a>
                         </li>
-                        <li>
-                            <a class="navlinkscont" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <li class="navlinks">
+                            <a class="navlinksitem" href="portfolio.html">Портфолио</a>
+                        </li>
+                        <li class="navlinks">
+                            <a class="navlinksitem" href="#">Контакты</a>
                         </li>
                     </ul>
-                </div>
-             </section>
+                </nav>    
+            </div>
+            <div class="navlinkscontact-container">
+                <ul class="navlistcontacts">
+                    <li class="navlistcontact-li">
+                        <a class="navlinkscont" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="navlistcontact-li">
+                        <a class="navlinkscont" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </div>
         </div>
      </header>    
      <main>
          <!--hero-->
          <section class="section1">
             <div class="container">
-                <section class="section1-1">
-                    <h1>Эффективные решения <br>для вашего бизнеса</h1>
-                    <button class="order-btn" type="button">Заказать услугу</button>
-                </section>
+                <h1>Эффективные решения <br>для вашего бизнеса</h1>
+                <button class="order-btn" type="button">Заказать услугу</button>
             </div>
         </section>
         <section class="section2">
