исправления аналогичные в portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,16 +15,16 @@
     <!--Хэдер-->
     <header>
         <div class="container">
-             <section class="section">
+            <div class="container section">
                 <div class="nav-container">
                     <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>     
                     <nav class="navigation">
                         <ul class="navlist">
                             <li class="navlinks">
-                                <a class="navlinksitem" href="index.html">Студия</a>
+                                <a class="navlinksitem current" href="index.html">Студия</a>
                             </li>
                             <li class="navlinks">
-                                <a class="navlinksitem current" href="portfolio.html">Портфолио</a>
+                                <a class="navlinksitem" href="portfolio.html">Портфолио</a>
                             </li>
                             <li class="navlinks">
                                 <a class="navlinksitem" href="#">Контакты</a>
@@ -34,34 +34,34 @@
                 </div>
                 <div class="navlinkscontact-container">
                     <ul class="navlistcontacts">
-                        <li>
+                        <li class="navlistcontact-li">
                             <a class="navlinkscont" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
-                        <li>
+                        <li class="navlistcontact-li">
                             <a class="navlinkscont" href="tel:+380961111111">+38 096 111 11 11</a>
                         </li>
                     </ul>
                 </div>
-             </section>
+            </div>
         </div>
     </header> 
     <main>
         <section class="container">
                 <!--Навигация по галерее-->
             <ul class="navlist portfolio">
-                <li class="navlinks">
+                <li class="filter-li">
                     <button type="button" class="navlinksitem filter current">Все</button>
                 </li>
-                <li class="navlinks">
+                <li class="filter-li">
                     <button type="button" class="navlinksitem filter">Веб-сайты</button>
                 </li>
-                <li class="navlinks">
+                <li class="filter-li">
                     <button type="button" class="navlinksitem filter">Приложения</button>
                 </li>
-                <li class="navlinks">
+                <li class="filter-li">
                     <button type="button" class="navlinksitem filter">Дизайн</button>
                 </li>
-                <li class="navlinks">
+                <li class="filter-li">
                     <button type="button" class="navlinksitem filter">Маркетинг</button>
                 </li>
             </ul>        
@@ -131,6 +131,7 @@
                             <p class="categories">Приложение</p>
                         </a>
                     </li>
+                    
                 </ul>
             </div>
         </section>
