--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
                     <nav class="navigation">
                         <ul class="navlist">
                             <li class="navlinks">
-                                <a class="navlinksitem current" href="index.html">Студия</a>
+                                <a class="navlinksitem" href="index.html">Студия</a>
                             </li>
                             <li class="navlinks">
-                                <a class="navlinksitem" href="portfolio.html">Портфолио</a>
+                                <a class="navlinksitem  current" href="portfolio.html">Портфолио</a>
                             </li>
                             <li class="navlinks">
                                 <a class="navlinksitem" href="#">Контакты</a>
