--- a/index.html
+++ b/index.html
@@ -15,32 +15,28 @@
      <!--Хэдер-->
      <header>
         <div class="container section">
-            <div class="nav-container">
-                <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>     
-                <nav class="navigation">
-                    <ul class="navlist">
-                        <li class="navlinks">
-                            <a class="navlinksitem current" href="index.html">Студия</a>
-                        </li>
-                        <li class="navlinks">
-                            <a class="navlinksitem" href="portfolio.html">Портфолио</a>
-                        </li>
-                        <li class="navlinks">
-                            <a class="navlinksitem" href="#">Контакты</a>
-                        </li>
-                    </ul>
-                </nav>    
-            </div>
-            <div class="navlinkscontact-container">
-                <ul class="navlistcontacts">
-                    <li class="navlistcontact-li">
-                        <a class="navlinkscont" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <nav class="navigation">
+                <a class="webstudiolink" href="#"><span class="web-blue">Web</span><span class="studio-up">Studio</span></a>
+                <ul class="navlist">
+                    <li class="navlinks">
+                        <a class="navlinksitem current" href="index.html">Студия</a>
                     </li>
-                    <li class="navlistcontact-li">
-                        <a class="navlinkscont" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <li class="navlinks">
+                        <a class="navlinksitem" href="portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="navlinks">
+                        <a class="navlinksitem" href="#">Контакты</a>
                     </li>
                 </ul>
-            </div>
+            </nav>    
+            <ul class="navlistcontacts">
+                <li class="navlistcontact-li">
+                    <a class="navlinkscont" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="navlistcontact-li">
+                    <a class="navlinkscont" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
         </div>
      </header>    
      <main>
@@ -97,23 +93,31 @@
                 <ul class="ul-section4">
                     <li class="li-section4">
                         <img src="./img/team/team-card-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                        <h3 class="section4-h3">Игорь Демьяненко</h3>
-                        <p class="section4-position">Product Designer</p>
+                        <div class="li-h3p">
+                            <h3 class="section4-h3">Игорь Демьяненко</h3>
+                            <p class="section4-position">Product Designer</p>
+                        </div>
                     </li>
                     <li class="li-section4">
                         <img src="./img/team/team-card-2.jpg" alt="Ольга Репина" width="270" height="270">
-                        <h3 class="section4-h3">Ольга Репина</h3>
-                        <p class="section4-position">Frontend Developer</p>
+                        <div li-h3p>
+                            <h3 class="section4-h3">Ольга Репина</h3>
+                            <p class="section4-position">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="li-section4">
                         <img src="./img/team/team-card-3.jpg" alt="Николай Тарасов" width="270" height="270">
-                        <h3 class="section4-h3">Николай Тарасов</h3>
-                        <p class="section4-position">Marketing</p>
+                        <div li-h3p>
+                            <h3 class="section4-h3">Николай Тарасов</h3>
+                            <p class="section4-position">Marketing</p>
+                        </div>
                     </li>
                     <li class="li-section4">
                         <img src="./img/team/team-card-4.jpg" alt="Михаил Ермаков" width="270" height="270">
-                        <h3 class="section4-h3">Михаил Ермаков</h3>
-                        <p class="section4-position">UI Designer</p>
+                        <div li-h3p>
+                            <h3 class="section4-h3">Михаил Ермаков</h3>
+                            <p class="section4-position">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
            </div>
