--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
                     </li>
                     <li class="li-section4">
                         <img src="./img/team/team-card-2.jpg" alt="Ольга Репина" width="270" height="270">
-                        <div li-h3p>
+                        <div class="li-h3p">
                             <h3 class="section4-h3">Ольга Репина</h3>
                             <p class="section4-position">Frontend Developer</p>
                         </div>
                     </li>
                     <li class="li-section4">
                         <img src="./img/team/team-card-3.jpg" alt="Николай Тарасов" width="270" height="270">
-                        <div li-h3p>
+                        <div class="li-h3p">
                             <h3 class="section4-h3">Николай Тарасов</h3>
                             <p class="section4-position">Marketing</p>
                         </div>
                     </li>
                     <li class="li-section4">
                         <img src="./img/team/team-card-4.jpg" alt="Михаил Ермаков" width="270" height="270">
-                        <div li-h3p>
+                        <div class="li-h3p">
                             <h3 class="section4-h3">Михаил Ермаков</h3>
                             <p class="section4-position">UI Designer</p>
                         </div>
