--- a/portfolio.html
+++ b/portfolio.html
@@ -46,110 +46,112 @@
         </div>
     </header> 
     <main>
-        <section class="container">
-                <!--Навигация по галерее-->
-            <ul class="navlist portfolio">
-                <li class="filter-li">
-                    <button type="button" class="navlinksitem filter current">Все</button>
-                </li>
-                <li class="filter-li">
-                    <button type="button" class="navlinksitem filter">Веб-сайты</button>
-                </li>
-                <li class="filter-li">
-                    <button type="button" class="navlinksitem filter">Приложения</button>
-                </li>
-                <li class="filter-li">
-                    <button type="button" class="navlinksitem filter">Дизайн</button>
-                </li>
-                <li class="filter-li">
-                    <button type="button" class="navlinksitem filter">Маркетинг</button>
-                </li>
-            </ul>        
-            <!--Портфолио-->
-            <div class="gallery">
-                <ul class="ul-gallery">
-                    <li class="li-gallery">
-                        <a class="gallery-items" href="#">
-                            <img src="./img2/1.jpg" alt="Технокряк" width="370" height="294">
-                           <div class="gallery-ph3">
-                                <h3 class="gallery-h3">Технокряк</h3>
-                                <p class="categories">Веб-сайт</p>
-                           </div>
-                        </a>
+        <section class="section5">
+            <div class="container">
+                    <!--Навигация по галерее-->
+                <ul class="navlist portfolio">
+                    <li class="filter-li">
+                        <button type="button" class="navlinksitem filter current">Все</button>
                     </li>
-                    <li class="li-gallery">
-                        <a class="gallery-items" href="#">
-                            <img src="./img2/2New-Orlean-vs-Golden-Star.jpg" alt="New Orlean vs Golden Star" width="370" height="294">
+                    <li class="filter-li">
+                        <button type="button" class="navlinksitem filter">Веб-сайты</button>
+                    </li>
+                    <li class="filter-li">
+                        <button type="button" class="navlinksitem filter">Приложения</button>
+                    </li>
+                    <li class="filter-li">
+                        <button type="button" class="navlinksitem filter">Дизайн</button>
+                    </li>
+                    <li class="filter-li">
+                        <button type="button" class="navlinksitem filter">Маркетинг</button>
+                    </li>
+                </ul>        
+                <!--Портфолио-->
+                <div class="gallery">
+                    <ul class="ul-gallery">
+                        <li class="li-gallery">
+                            <a class="gallery-items" href="#">
+                                <img src="./img2/1.jpg" alt="Технокряк" width="370" height="294">
                             <div class="gallery-ph3">
-                                <h3 class="gallery-h3">Постер New Orlean vs Golden Star</h3>
-                                <p class="categories">Дизайн</p>
+                                    <h3 class="gallery-h3">Технокряк</h3>
+                                    <p class="categories">Веб-сайт</p>
                             </div>
-                        </a>
-                    </li>
-                    <li class="li-gallery">
-                        <a class="gallery-items" href="#">
-                            <img src="./img2/3Seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+                            </a>
+                        </li>
+                        <li class="li-gallery">
+                            <a class="gallery-items" href="#">
+                                <img src="./img2/2New-Orlean-vs-Golden-Star.jpg" alt="New Orlean vs Golden Star" width="370" height="294">
+                                <div class="gallery-ph3">
+                                    <h3 class="gallery-h3">Постер New Orlean vs Golden Star</h3>
+                                    <p class="categories">Дизайн</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="li-gallery">
+                            <a class="gallery-items" href="#">
+                                <img src="./img2/3Seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+                                <div class="gallery-ph3">
+                                    <h3 class="gallery-h3">Ресторан Seafood</h3>
+                                    <p class="categories">Приложение</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="li-gallery">
+                            <a class="gallery-items" href="#">
+                                <img src="./img2/4Prime.jpg" alt="Проект Prime" width="370" height="294">
+                                <div class="gallery-ph3">
+                                    <h3 class="gallery-h3">Проект Prime</h3>
+                                    <p class="categories">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="li-gallery">
+                            <a class="gallery-items" href="#">
+                                <img src="./img2/5Boxes.jpg" alt="Проект Boxes" width="370" height="294">
                             <div class="gallery-ph3">
-                                <h3 class="gallery-h3">Ресторан Seafood</h3>
-                                <p class="categories">Приложение</p>
+                                    <h3 class="gallery-h3">Проект Boxes</h3>
+                                    <p class="categories">Приложение</p>
                             </div>
-                        </a>
-                    </li>
-                    <li class="li-gallery">
-                        <a class="gallery-items" href="#">
-                            <img src="./img2/4Prime.jpg" alt="Проект Prime" width="370" height="294">
+                            </a>
+                        </li>
+                        <li class="li-gallery">
+                            <a class="gallery-items" href="#">
+                                <img src="./img2/6Inspiration-has-no-Borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                                <div class="gallery-ph3">
+                                    <h3 class="gallery-h3">Inspiration has no Borders</h3>
+                                    <p class="categories">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="li-gallery">
+                            <a class="gallery-items" href="#">
+                                <img src="./img2/7-Limited-Edition.jpg" alt="Издание Limited Edition" width="370" height="294">
+                                <div class="gallery-ph3">
+                                    <h3 class="gallery-h3">Издание Limited Edition</h3>
+                                    <p class="categories">Дизайн</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="li-gallery">
+                            <a class="gallery-items" href="#">
+                                <img src="./img2/8-LAB.jpg" alt="Проект LAB" width="370" height="294">
                             <div class="gallery-ph3">
-                                <h3 class="gallery-h3">Проект Prime</h3>
-                                <p class="categories">Маркетинг</p>
+                                    <h3 class="gallery-h3">Проект LAB</h3>
+                                    <p class="categories">Маркетинг</p>
                             </div>
-                        </a>
-                    </li>
-                    <li class="li-gallery">
-                        <a class="gallery-items" href="#">
-                            <img src="./img2/5Boxes.jpg" alt="Проект Boxes" width="370" height="294">
-                           <div class="gallery-ph3">
-                                <h3 class="gallery-h3">Проект Boxes</h3>
-                                <p class="categories">Приложение</p>
-                           </div>
-                        </a>
-                    </li>
-                    <li class="li-gallery">
-                        <a class="gallery-items" href="#">
-                            <img src="./img2/6Inspiration-has-no-Borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                            <div class="gallery-ph3">
-                                <h3 class="gallery-h3">Inspiration has no Borders</h3>
-                                <p class="categories">Веб-сайт</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="li-gallery">
-                        <a class="gallery-items" href="#">
-                            <img src="./img2/7-Limited-Edition.jpg" alt="Издание Limited Edition" width="370" height="294">
-                            <div class="gallery-ph3">
-                                <h3 class="gallery-h3">Издание Limited Edition</h3>
-                                <p class="categories">Дизайн</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="li-gallery">
-                        <a class="gallery-items" href="#">
-                            <img src="./img2/8-LAB.jpg" alt="Проект LAB" width="370" height="294">
-                           <div class="gallery-ph3">
-                                <h3 class="gallery-h3">Проект LAB</h3>
-                                <p class="categories">Маркетинг</p>
-                           </div>
-                        </a>
-                    </li>
-                    <li class="li-gallery">
-                        <a class="gallery-items" href="#">
-                            <img src="./img2/9Growing-Business.jpg" alt="Growing Business" width="370" height="294">
-                            <div class="gallery-ph3">
-                                <h3 class="gallery-h3">Growing Business</h3>
-                                <p class="categories">Приложение</p>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
+                            </a>
+                        </li>
+                        <li class="li-gallery">
+                            <a class="gallery-items" href="#">
+                                <img src="./img2/9Growing-Business.jpg" alt="Growing Business" width="370" height="294">
+                                <div class="gallery-ph3">
+                                    <h3 class="gallery-h3">Growing Business</h3>
+                                    <p class="categories">Приложение</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
